1.添加了详细的注释 2.删除会话同时删除redis和MySQL数据 3.修改了系统提示词 4.AiCodeHelperServiceFactory不适用自定义的工具